<resources>
    <string name="app_name" translatable="false">bptf</string>
    <string name="filler_unknown" translatable="true">unknown</string>
    <string name="pref_auto_sync" translatable="false">pref_auto_sync</string>
    <string name="pref_background_sync" translatable="false">pref_background_sync</string>
    <string name="pref_buds_diff" translatable="false">pref_buds_diff_v2</string>
    <string name="pref_buds_price" translatable="false">pref_buds_price</string>
    <string name="pref_buds_raw" translatable="false">pref_buds_raw_v2</string>
    <string name="pref_debug" translatable="false">pref_debug</string>
    <string name="pref_dev_key_notification" translatable="false">pref_dev_key_notfication</string>
    <string name="pref_developer_key" translatable="false">pref_developer_key</string>
    <string name="pref_initial_load" translatable="false">initial_load</string>
    <string name="pref_key_diff" translatable="false">pref_key_diff_v2</string>
    <string name="pref_key_price" translatable="false">pref_key_price</string>
    <string name="pref_key_raw" translatable="false">pref_key_raw_v2</string>
    <string name="pref_last_backpack_update" translatable="false">pref_last_backpack_update</string>
    <string name="pref_last_price_list_update" translatable="false">pref_last_price_list_update</string>
    <string name="pref_last_user_data_update" translatable="false">pref_last_user_data_update</string>
    <string name="pref_main_preference_screen" translatable="false">main_preference_screen</string>
    <string name="pref_metal_diff" translatable="false">pref_metal_diff_v2</string>
    <string name="pref_metal_price" translatable="false">pref_metal_price</string>
    <string name="pref_metal_raw_usd" translatable="false">pref_metal_raw_v2</string>
    <string name="pref_new_avatar" translatable="false">pref_new_avatar</string>
    <string name="pref_notification" translatable="false">pref_notification</string>
    <string name="pref_notification_interval" translatable="false">pref_notification_interval</string>
    <string name="pref_player_avatar_url" translatable="false">pref_player_avatar_url</string>
    <string name="pref_player_backpack_value_dota2" translatable="false">pref_player_backpack_value_dota2</string>
    <string name="pref_player_backpack_value_tf2" translatable="false">pref_player_backpack_value_tf2_v2</string>
    <string name="pref_player_banned" translatable="false">pref_player_banned</string>
    <string name="pref_player_community_banned" translatable="false">pref_player_community_banned</string>
    <string name="pref_player_economy_banned" translatable="false">pref_player_economy_banned</string>
    <string name="pref_player_group" translatable="false">pref_player_group</string>
    <string name="pref_player_last_online" translatable="false">pref_player_last_online</string>
    <string name="pref_player_name" translatable="false">pref_player_name</string>
    <string name="pref_player_profile_created" translatable="false">pref_player_profile_created</string>
    <string name="pref_player_reputation" translatable="false">pref_player_reputation</string>
    <string name="pref_player_scammer" translatable="false">pref_player_scammer</string>
    <string name="pref_player_state" translatable="false">pref_player_state</string>
    <string name="pref_player_trust_negative" translatable="false">pref_player_trust_negative</string>
    <string name="pref_player_trust_positive" translatable="false">pref_player_trust_positive</string>
    <string name="pref_player_vac_banned" translatable="false">pref_player_vac_banned</string>
    <string name="pref_preferred_advanced_calculator" translatable="false">pref_preferred_advanced_calculator</string>
    <string name="pref_resolved_steam_id" translatable="false">pref_resolved_steam_id</string>
    <string name="pref_steam_id" translatable="false">Steam ID</string>
    <string name="pref_sync_interval" translatable="false">pref_sync_interval</string>
    <string name="pref_user_developer" translatable="false">pref_user_developer</string>
    <string name="pref_user_items" translatable="false">pref_user_items</string>
    <string name="pref_user_raw_key" translatable="false">pref_user_raw_key</string>
    <string name="pref_user_raw_metal" translatable="false">pref_user_raw_metal</string>
    <string name="pref_user_slots" translatable="false">pref_user_slots</string>
    <string name="action_add" translatable="true">Add</string>
    <string name="action_browse_effect" translatable="true">Browse by effect</string>
    <string name="action_cancel" translatable="true">Cancel</string>
    <string name="action_close" translatable="true">Close</string>
    <string name="action_clear" translatable="true">Clear items</string>
    <string name="action_later" translatable="true">Maybe later</string>
    <string name="action_refresh" translatable="true">Refresh</string>
    <string name="action_settings" translatable="true">Settings</string>
    <string name="action_show_advanced" translatable="true">Advanced mode</string>
    <string name="action_show_simple" translatable="true">Simple mode</string>
    <string name="action_sort" translatable="true">Sort</string>
    <string name="action_yes" translatable="true">Yes</string>
    <string name="search_title" translatable="true">Search</string>
    <string name="search_hint" translatable="true">Item name or steam ID</string>
    <string name="title_activity_credits" translatable="false">Credits</string>
    <string name="title_activity_item_chooser" translatable="false">ItemChooserActivity</string>
    <string name="title_activity_item_detail" translatable="false">ItemDetailActivity</string>
    <string name="title_activity_search" translatable="false">SearchActivity</string>
    <string name="title_activity_settings" translatable="false">Settings</string>
    <string name="title_activity_steam_login" translatable="false">SteamLoginActivity</string>
    <string name="title_activity_unusual" translatable="false">UnusualActivity</string>
    <string name="title_activity_user_backpack" translatable="false">UserBackpackActivity</string>
    <string name="title_activity_user_info" translatable="false">UserInfoActivity</string>
    <string name="title_activity_welcome" translatable="false">WelcomeActivity</string>
    <string name="title_calculator" translatable="true">Calculator</string>
    <string name="title_custom_profile" formatted="false" translatable="true">%s\'s profile</string>
    <string name="title_custom_backpack" formatted="false" translatable="true">%s\'s backpack</string>
    <string name="title_effects" translatable="true">Effects</string>
    <string name="title_home" translatable="true">Latest Changes</string>
    <string name="title_prices" translatable="true">Unusual Prices</string>
    <string name="title_unusuals" translatable="true">Unusuals</string>
    <string name="title_user_profile" translatable="true">User Profile</string>
    <string name="pref_title_quick_return" translatable="false">QuickReturn</string>
    <string name="pref_summary_developer" translatable="false">Long Tran</string>
    <string name="pref_button_api_key" translatable="false">backpack.tf/api/register</string>
    <string name="pref_category_about" translatable="true">About</string>
    <string name="pref_category_account" translatable="true">Account</string>
    <string name="pref_category_dev" translatable="true">Developer</string>
    <string name="pref_category_notification" translatable="true">Notifications</string>
    <string name="pref_description_api_key" translatable="true">Providing your own API key fixes the issue, where sometimes you wouldn\'t be able to refresh. To register your own API key go to:</string>
    <string name="pref_description_api_key_default" translatable="true">Using the default key</string>
    <string name="pref_description_api_key_custom" translatable="true">Using a custom key</string>
    <string name="pref_category_sync" translatable="true">Syncing</string>
    <string name="pref_hint_dev_key" translatable="true">API key</string>
    <string name="pref_hint_steam_id" translatable="true">Steam ID</string>
    <string name="pref_policy_api_key" translatable="true">Your key will not be shared with anyone.</string>
    <string name="pref_policy_steam_id" translatable="true">Your id will not be shared with anyone.</string>
    <string name="pref_summary_off_auto_sync" translatable="true">Manual refresh</string>
    <string name="pref_summary_on_auto_sync" translatable="true">Auto-update database</string>
    <string name="pref_summary_particles" translatable="true">provided by backpack.tf</string>
    <string name="pref_summary_quick_return" translatable="true">by felipecsl</string>
    <string name="pref_title_auto_sync" translatable="true">Auto-update database</string>
    <string name="pref_title_background_sync" translatable="true">Sync in the background</string>
    <string name="pref_title_changelog" translatable="true">Changelogs</string>
    <string name="pref_title_credits" translatable="true">Credits</string>
    <string name="pref_title_debug_logs" translatable="true">Enable debug logs</string>
    <string name="pref_title_developer" translatable="true">Developer</string>
    <string name="pref_title_developer_key" translatable="true">Custom API key</string>
    <string name="pref_title_feedback" translatable="true">Send feedback or bug report</string>
    <string name="pref_title_notification" translatable="true">backpack.tf Notifications</string>
    <string name="pref_title_notification_interval" translatable="true">Check for notifications</string>
    <string name="pref_title_particles" translatable="true">Particle effect images</string>
    <string name="pref_title_rate" translatable="true">Rate the app on Google Play</string>
    <string name="pref_title_sync_interval" translatable="true">Sync frequency</string>
    <string name="pref_title_translate" translatable="true">Would you like to help translate the app?</string>
    <string name="pref_title_version" translatable="true">Version</string>
    <string name="description_background" translatable="true">Background</string>
    <string name="description_change" translatable="true">Change</string>
    <string name="description_delete" translatable="true">Delete</string>
    <string name="description_icon" translatable="true">Icon</string>
    <string name="description_player_avatar" translatable="true">Player Avatar</string>
    <string name="user_page_link_bazaar" translatable="false">Bazaar.tf</string>
    <string name="user_page_link_steamrep" translatable="false">STEAMREP</string>
    <string name="user_page_link_tf2op" translatable="false">TF2Outpost</string>
    <string name="user_page_link_tf2tp" translatable="false">TF2TP</string>
    <string name="user_page_vac" translatable="false">VAC</string>
    <string name="user_page_link_community" translatable="true">COMMUNITY</string>
    <string name="user_page_reputation" translatable="true">Reputation:</string>
    <string name="user_page_trade_status" translatable="true">TRADE</string>
    <string name="user_page_trust" translatable="true">TRUST</string>
    <string name="calculator_usd" translatable="false">USD</string>
    <string name="item_chooser_count" translatable="false">1</string>
    <string name="calculator_earbuds" translatable="true">Earbuds</string>
    <string name="calculator_keys" translatable="true">Keys</string>
    <string name="calculator_metal" translatable="true">Refined Metal</string>
    <string name="item_chooser_hint" translatable="true">Start typing…</string>
    <string name="item_chooser_no_match" translatable="true">No match or string has no price</string>
    <string name="menu_name" translatable="true">Name</string>
    <string name="menu_average_price" translatable="true">Average price</string>
    <string name="placeholder_unknown" translatable="false">\?</string>
</resources>