<?xml version="1.0" encoding="utf-8"?>
<!--Menu resource used in the unusual fragment.-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activity.UnusualActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="100"
        android:title="@string/search_title"
        app:showAsAction="always" />

    <!--Spinner used for sorting the items.-->
    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort"
        android:orderInCategory="90"
        android:title="@string/action_sort"
        app:showAsAction="ifRoom|collapseActionView">
        <menu>
            <item
                android:id="@+id/menu_sort_name"
                android:title="@string/menu_name" />
            <item
                android:id="@+id/menu_sort_price"
                android:title="@string/menu_average_price" />
        </menu>
    </item>

    <!--Button used for switching between hat and effect view.-->
    <item
        android:id="@+id/action_effect"
        android:icon="@drawable/ic_star_outline"
        android:orderInCategory="80"
        android:title="@string/action_browse_effect"
        app:showAsAction="ifRoom|collapseActionView" />

</menu>
