<?xml version="1.0" encoding="utf-8"?>
<!--Layout resource for simple calculator-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.tlongdev.bktf.fragment.SimpleCalculatorFragment">

    <!--Buds input-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculator_earbuds"
        android:textColor="@color/primary"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_text_earbuds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:textColorHighlight="@color/primary_light" />

    <!--Keys input-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculator_keys"
        android:textColor="@color/primary"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_text_keys"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:textColorHighlight="@color/primary_light" />

    <!--Metal input-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculator_metal"
        android:textColor="@color/primary"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_text_metal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:textColorHighlight="@color/primary_light" />

    <!--USD input-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculator_usd"
        android:textColor="@color/primary"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_text_usd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:textColorHighlight="@color/primary_light" />

</LinearLayout>
