<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="Reputation"
        android:textColor="@color/accent"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/separator_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <!--Reputation of the player-->
        <TextView
            android:id="@+id/text_view_player_reputation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_page_reputation"
            android:textColor="@color/text_secondary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--Trust score of the user-->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user_page_trust"
                android:textColor="@color/text_secondary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_view_trust_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/status_background_neutral"
                android:paddingEnd="3dp"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:text="@string/placeholder_unknown"
                android:textColor="#fff"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            style="@style/DividerHorizontal.Margins"
            android:background="#555" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--Steamrep status-->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user_page_link_steamrep"
                android:textColor="@color/text_secondary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_view_steamrep_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/status_background_neutral"
                android:paddingEnd="3dp"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:text="@string/placeholder_unknown"
                android:textColor="#fff"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            style="@style/DividerHorizontal.Margins"
            android:background="#555" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--Steam trade status-->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user_page_trade_status"
                android:textColor="@color/text_secondary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_view_trade_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/status_background_neutral"
                android:paddingEnd="3dp"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:text="@string/placeholder_unknown"
                android:textColor="#fff"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            style="@style/DividerHorizontal.Margins"
            android:background="#555" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--VAC satus-->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user_page_vac"
                android:textColor="@color/text_secondary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_view_vac_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/status_background_neutral"
                android:paddingEnd="3dp"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:text="@string/placeholder_unknown"
                android:textColor="#fff"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            style="@style/DividerHorizontal.Margins"
            android:background="#555" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--Community status-->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user_page_link_community"
                android:textColor="@color/text_secondary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_view_community_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/status_background_neutral"
                android:paddingEnd="3dp"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:text="@string/placeholder_unknown"
                android:textColor="#fff"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>